update styling: * fix energy-monitor cutoff * --border-radius to --oe-border-radius * style debug-button

--- a/ui/src/global.scss
+++ b/ui/src/global.scss
@@ -245,12 +245,12 @@ formly-input-section {
 }
 
 :root {
-    --border-radius: 10px;
+    --oe-border-radius: 10px;
     --oe-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.18), 0 3px 10px 0 rgba(0, 0, 0, 0.06);
 
     ion-card {
         box-shadow: var(--oe-shadow) !important;
-        border-radius: var(--border-radius);
+        border-radius: var(--oe-border-radius);
     }
 
     ion-header::after {
@@ -262,13 +262,13 @@ formly-input-section {
     }
 
     ion-searchbar {
-        --box-shadow: var(var(--oe-shadow)) !important;
+        --box-shadow: var(--oe-shadow) !important;
         --background: var(--ion-item-background);
         color: var(--ion-text-color);
     }
 
     ion-searchbar .searchbar-input {
-        border-radius: var(--border-radius);
+        border-radius: var(--oe-border-radius);
     }
 
     // Used in IBN, dynamicFeedInLimitation
